# nautilus-admin-gtk4

./: AUTHORS  CMakeLists.txt  NEWS  README.md
extension/: nautilus-admin.py
po/: ru.po
